# teal-agents

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  404.html  AUTHENTICATION_FLOW.md  CDW-1601-1602_IMPLEMENTATION.md  CLAUDE.md  MCP_REFACTORING_SUMMARY.md  Makefile  README-arcade.md  README.md  SECRETS_QUICK_REFERENCE.md  SECRET_DETECTION_IMPLEMENTATION.md  SECURITY_SECRETS.md  add_in.py  ao-hybrid-celery.Dockerfile  ao-hybrid.Dockerfile  ao-services.Dockerfile  ao.Dockerfile  co.Dockerfile  index.html  objects.inv  setup-secret-detection.ps1  setup-secret-detection.sh  teal-agents.Dockerfile  test_mcp_integration.py
.github/workflows/: build-and-push-ao-services.yaml  build-and-push-ao.yaml  build-and-push-ska-utils.yaml  build-and-push-teal-agents.yaml  build.yaml  (+5 more)
MCP_PR_REVIEW_GUIDE/: index.html
PR_MESSAGE/: index.html
TEST-integration/: env.test.example  get-entra-token.sh  get-user-token.sh  start-server.sh  test-agent-config.yaml  test-complete-integration.sh  test-entra-integration.sh  test-hybrid-arcade-config.yaml  test-multi-user.sh
examples/: mcp-agent-config.yaml  mcp-http-config.yaml  mcp-multi-transport-config.yaml  mcp-simplified-config.yaml  mcp-websocket-config.yaml  session-scope-test.py
mcp-client-specification/: index.html
mcp-integration/: index.html
ray_tests/: README.md  requirements.txt
reference/: index.html
search/: search_index.json
src/orchestrators/workflow-orchestrator/orchestrator/: pyproject.toml
src/orchestrators/workflow-orchestrator/orchestrator/src/workflow_orchestrator/: agent_invoker.py
(+417 files in other folders)
